--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,10 +8,10 @@ build-branch:
   services:
     - docker:19.03.12-dind
   variables:
-    IMAGE_TAG: $CI_REGISTRY_IMAGE:main
+    IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker pull $IMAGE_TAG
+    - docker image pull $IMAGE_TAG
     - docker build -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
 
