--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build-branch:
     IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_BRANCH
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker image pull $IMAGE_TAG
+   # - docker image pull $IMAGE_TAG
     - docker build -t $IMAGE_TAG .
     - docker push $IMAGE_TAG
 
