--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,36 +1,36 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.194.3/containers/alpine
+// https://github.com/microsoft/vscode-dev-containers/tree/v0.202.5/containers/javascript-node
 {
 	"name": "Node.js",
-	"dockerComposeFile": "docker-compose.yml",
-	"service": "app",
-	"workspaceFolder": "/workspace",
+	"runArgs": ["--init"],
+	"build": {
+		"dockerfile": "Dockerfile",
+		// Update 'VARIANT' to pick a Node version: 16, 14, 12.
+		// Append -bullseye or -buster to pin to an OS version.
+		// Use -bullseye variants on local arm64/Apple Silicon.
+		"args": { "VARIANT": "16-bullseye" }
+	},
 
-	//"build": {
-	//	"dockerfile": "Dockerfile"
-	//},
-
-	
-	// Set *default* container specific settings.json values on container create. 
-	"settings": {
-			"plantuml.server": "http://localhost:8888",
-			"plantuml.render": "PlantUMLServer",
-		},
+	// Set *default* container specific settings.json values on container create.
+	"settings": {},
 
 	// Add the IDs of extensions you want installed when the container is created.
-	// Note that some extensions may not work in Alpine Linux. See https://aka.ms/vscode-remote/linux.
-	"extensions": ["jebbs.plantuml"],
+	"extensions": [
+		"dbaeumer.vscode-eslint",
+		"arjun.swagger-viewer",
+		"humao.rest-client"
+	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	"forwardPorts": [8888],
+	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "uname -a",
-	"postCreateCommand": "chmod +x .devcontainer/setupcommands.sh && ./.devcontainer/setupcommands.sh",
-
-	// Uncomment when using a ptrace-based debugger like C++, Go, and Rust
-	// "runArgs": [ "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined" ],
+	// "postCreateCommand": "yarn install",
 
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	//"remoteUser": "vscode"
+	"remoteUser": "node",
+	"features": {
+		"docker-in-docker": "latest",
+		"git": "os-provided"
+	}
 }
