--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,32 @@
 stages:
+  - commitlint
   - build
   - tag
+
+commitlint:
+  stage: commitlint
+  image: node:12
+  rules:
+    - if: '$CI_COMMIT_BRANCH != $CI_DEFAULT_BRANCH'
+  allow_failure: true
+  before_script:
+    - npm install --save-dev @commitlint/{config-conventional,cli}
+    - chmod +x commitconfig.sh
+    - ./commitconfig.sh
+  script:
+    - npx commitlint --from=$CI_COMMIT_BEFORE_SHA
+
+commitlint-default:
+  stage: commitlint
+  image: node:12
+  rules:
+    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH'
+  before_script:
+    - npm install --save-dev @commitlint/{config-conventional,cli}
+    - chmod +x commitconfig.sh
+    - ./commitconfig.sh
+  script:
+    - npx commitlint --from=$CI_COMMIT_BEFORE_SHA
 
 build-branch:
   image: docker:19.03.12
