--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - 10001:3000
     environment:
-      HOST_BASE_URL: http://localhost:10001/v0
+      HOST_BASE_URL: http://localhost:10001
       MONGO_URI: mongodb://backend-database
     networks:
       - backend-network
